--- a/IOSModelBay/Views&Controllers/Find/Views/MB_UserTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Find/Views/MB_UserTableViewCell.xib
@@ -1,36 +1,69 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GOTHIC.TTF">
+            <string>CenturyGothic</string>
+            <string>CenturyGothic</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MB_UserTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EY9-yM-62m">
-                        <rect key="frame" x="0.0" y="0.0" width="80" height="79"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EY9-yM-62m">
+                        <rect key="frame" x="11" y="11" width="41" height="41"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="41" id="CAq-Lr-tQx"/>
+                            <constraint firstAttribute="width" constant="41" id="inm-du-O2i"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PE6-l5-J5u">
-                        <rect key="frame" x="105" y="14" width="76" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PE6-l5-J5u">
+                        <rect key="frame" x="67" y="13" width="73" height="19"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="11" id="wMd-6i-7Hf"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="15"/>
+                        <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="wMd-6i-7Hf"/>
+                            </mask>
+                        </variation>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="fullname" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWt-cr-7Yk">
-                        <rect key="frame" x="105" y="43" width="65" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="fullname" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWt-cr-7Yk">
+                        <rect key="frame" x="67" y="35" width="51" height="15"/>
+                        <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="12"/>
+                        <color key="textColor" red="0.61960784313725492" green="0.61960784313725492" blue="0.61960784313725492" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="EY9-yM-62m" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="BLV-kw-uCT"/>
+                    <constraint firstItem="EY9-yM-62m" firstAttribute="bottom" secondItem="KWt-cr-7Yk" secondAttribute="bottom" constant="2" id="II5-3v-0P3"/>
+                    <constraint firstItem="PE6-l5-J5u" firstAttribute="leading" secondItem="KWt-cr-7Yk" secondAttribute="leading" id="P4t-zb-Szg"/>
+                    <constraint firstItem="KWt-cr-7Yk" firstAttribute="top" secondItem="PE6-l5-J5u" secondAttribute="bottom" constant="2" id="bWO-fv-B1l"/>
+                    <constraint firstItem="PE6-l5-J5u" firstAttribute="leading" secondItem="EY9-yM-62m" secondAttribute="trailing" constant="15" id="h2S-Uz-67e"/>
+                    <constraint firstItem="EY9-yM-62m" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="kTX-xq-fqb"/>
+                    <constraint firstItem="PE6-l5-J5u" firstAttribute="top" secondItem="EY9-yM-62m" secondAttribute="top" constant="2" id="vvF-ER-acK"/>
+                </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="bWO-fv-B1l"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
+            <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="fullnameLabel" destination="KWt-cr-7Yk" id="wwC-En-Nri"/>
                 <outlet property="iconImageView" destination="EY9-yM-62m" id="Mjj-oA-m3Q"/>
