--- a/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_LikeCollectViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_LikeCollectViewCell.xib
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GOTHIC.TTF">
+            <string>CenturyGothic</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -13,18 +19,31 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="130"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="90h-D0-koa">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="96"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="90h-D0-koa">
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="90h-D0-koa" secondAttribute="height" multiplier="1:1" id="Kpl-v8-zsO"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IRy-xg-9wZ">
-                        <rect key="frame" x="29" y="101" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IRy-xg-9wZ">
+                        <rect key="frame" x="0.0" y="100" width="100" height="30"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="12"/>
+                        <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <constraints>
+                <constraint firstItem="IRy-xg-9wZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="5Ve-ow-hvo"/>
+                <constraint firstAttribute="trailing" secondItem="90h-D0-koa" secondAttribute="trailing" id="97M-F4-LYB"/>
+                <constraint firstAttribute="bottom" secondItem="IRy-xg-9wZ" secondAttribute="bottom" id="C5e-vO-RCO"/>
+                <constraint firstAttribute="trailing" secondItem="IRy-xg-9wZ" secondAttribute="trailing" id="Ed7-Yn-dgt"/>
+                <constraint firstItem="90h-D0-koa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="aDC-yx-cJ4"/>
+                <constraint firstItem="90h-D0-koa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="umm-FQ-NCp"/>
+                <constraint firstItem="IRy-xg-9wZ" firstAttribute="top" secondItem="90h-D0-koa" secondAttribute="bottom" id="w1f-UJ-4kM"/>
+            </constraints>
             <connections>
                 <outlet property="iconImageView" destination="90h-D0-koa" id="kmm-m2-6eE"/>
                 <outlet property="nameLabel" destination="IRy-xg-9wZ" id="n6X-3D-jnE"/>
