--- a/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
+++ b/IOSModelBay/Views&Controllers/Profile/MB_UserInfoView.xib
@@ -1,57 +1,114 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="FUTURASTD-BOOK.OTF">
+            <string>FuturaStd-Book</string>
+            <string>FuturaStd-Book</string>
+            <string>FuturaStd-Book</string>
+        </mutableArray>
+        <mutableArray key="GOTHIC.TTF">
+            <string>CenturyGothic</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MB_UserInfoView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b.png" translatesAutoresizingMaskIntoConstraints="NO" id="BcB-64-HJg">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BcB-64-HJg">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="WoQ-Lz-vR7">
-                    <rect key="frame" x="121" y="17" width="79" height="70"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCG-wP-EdG">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="WoQ-Lz-vR7">
+                    <rect key="frame" x="129" y="16" width="62" height="62"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="62" id="Cwj-CR-cbh"/>
+                        <constraint firstAttribute="height" constant="62" id="QXd-3D-6SG"/>
+                    </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRf-1J-0Zg">
-                    <rect key="frame" x="139" y="104" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRf-1J-0Zg">
+                    <rect key="frame" x="0.0" y="91" width="320" height="13"/>
+                    <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="13"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ju-Ry-0tj">
-                    <rect key="frame" x="19" y="141" width="274" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ju-Ry-0tj">
+                    <rect key="frame" x="0.0" y="113" width="320" height="15"/>
+                    <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="12"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTh-XV-FcM">
-                    <rect key="frame" x="19" y="182" width="121" height="30"/>
-                    <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <inset key="imageEdgeInsets" minX="-40" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" title="like" image="b.png" backgroundImage="a.png">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTh-XV-FcM">
+                    <rect key="frame" x="32" y="142" width="110" height="26"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="110" id="S00-CQ-TWs"/>
+                        <constraint firstAttribute="height" constant="26" id="pbW-by-Uag"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="12"/>
+                    <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    <state key="normal" title="COLLECTION" image="ic_add">
+                        <color key="titleColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <state key="selected" title="COLLECTION">
+                        <color key="titleColor" red="1" green="0.30980392156862746" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2cr-fY-XbY">
-                    <rect key="frame" x="172" y="182" width="127" height="30"/>
-                    <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <inset key="imageEdgeInsets" minX="-40" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" title="invite" image="b.png" backgroundImage="a.png">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2cr-fY-XbY">
+                    <rect key="frame" x="178" y="142" width="110" height="26"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="26" id="FUw-SE-B4A"/>
+                        <constraint firstAttribute="width" constant="110" id="YAm-5U-GZV"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="12"/>
+                    <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
+                    <state key="normal" title="INVITATION">
+                        <color key="titleColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="selected" title="INVITATION">
+                        <color key="titleColor" red="1" green="0.30980392156862746" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.98144756848265868" green="1" blue="0.24735261430375044" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="BcB-64-HJg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2rx-JH-uVM"/>
                 <constraint firstItem="BcB-64-HJg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="4P2-8f-1pV"/>
+                <constraint firstItem="BcB-64-HJg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7th-Nd-Naa"/>
                 <constraint firstItem="BcB-64-HJg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="8w0-No-UjG"/>
+                <constraint firstAttribute="trailing" secondItem="8Ju-Ry-0tj" secondAttribute="trailing" id="A5Q-4c-U93"/>
+                <constraint firstItem="WoQ-Lz-vR7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="C3y-Ls-EMP"/>
+                <constraint firstAttribute="trailing" secondItem="fRf-1J-0Zg" secondAttribute="trailing" id="ILa-g7-hVL"/>
+                <constraint firstAttribute="bottom" secondItem="rCG-wP-EdG" secondAttribute="bottom" id="IfG-2C-iAG"/>
+                <constraint firstAttribute="trailing" secondItem="2cr-fY-XbY" secondAttribute="trailing" constant="32" id="S6C-te-AqZ"/>
+                <constraint firstItem="fRf-1J-0Zg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="V6J-hr-2hD"/>
+                <constraint firstAttribute="bottom" secondItem="2cr-fY-XbY" secondAttribute="bottom" constant="16" id="fCx-Z7-fSh"/>
+                <constraint firstAttribute="trailing" secondItem="rCG-wP-EdG" secondAttribute="trailing" id="fNY-DT-Fq3"/>
+                <constraint firstAttribute="centerX" secondItem="WoQ-Lz-vR7" secondAttribute="centerX" id="gaL-rn-wKJ"/>
+                <constraint firstItem="8Ju-Ry-0tj" firstAttribute="top" secondItem="fRf-1J-0Zg" secondAttribute="bottom" constant="9" id="inm-SO-EQg"/>
+                <constraint firstItem="kTh-XV-FcM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="32" id="kCf-oT-OjS"/>
+                <constraint firstAttribute="trailing" secondItem="BcB-64-HJg" secondAttribute="trailing" id="kZs-Lh-OeI"/>
                 <constraint firstAttribute="trailing" secondItem="BcB-64-HJg" secondAttribute="trailing" id="noP-UP-UyI"/>
+                <constraint firstAttribute="bottom" secondItem="kTh-XV-FcM" secondAttribute="bottom" constant="16" id="nzl-sP-lVp"/>
+                <constraint firstItem="fRf-1J-0Zg" firstAttribute="top" secondItem="WoQ-Lz-vR7" secondAttribute="bottom" constant="13" id="o6X-Jc-iti"/>
+                <constraint firstItem="rCG-wP-EdG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="s2Q-v6-s0u"/>
                 <constraint firstAttribute="bottom" secondItem="BcB-64-HJg" secondAttribute="bottom" id="tYg-bS-Uj6"/>
+                <constraint firstAttribute="bottom" secondItem="BcB-64-HJg" secondAttribute="bottom" id="tex-0f-Ob0"/>
+                <constraint firstItem="8Ju-Ry-0tj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="v2l-mO-o5C"/>
+                <constraint firstItem="rCG-wP-EdG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="zTa-2m-9T3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -67,7 +124,7 @@
     </objects>
     <resources>
         <image name="a.png" width="30" height="30"/>
-        <image name="b.png" width="20" height="20"/>
+        <image name="ic_add" width="22" height="22"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
