--- a/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_SummaryTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Summary/Views/MB_SummaryTableViewCell.xib
@@ -1,54 +1,60 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GOTHIC.TTF">
+            <string>CenturyGothic</string>
+            <string>CenturyGothic</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MB_SummaryTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D2W-nM-fi8">
-                        <rect key="frame" x="20" y="0.0" width="280" height="59"/>
+                        <rect key="frame" x="11" y="0.0" width="298" height="42"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="介绍" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xE-vt-bOH">
-                                <rect key="frame" x="20" y="0.0" width="112" height="59"/>
+                                <rect key="frame" x="12" y="0.0" width="60" height="42"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="112" id="GFG-jy-XuI"/>
+                                    <constraint firstAttribute="width" constant="60" id="GFG-jy-XuI"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="13"/>
+                                <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="啦啦啦德玛西亚" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kq1-PU-kgW">
-                                <rect key="frame" x="132" y="19" width="128" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="啦啦啦德玛西亚" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kq1-PU-kgW">
+                                <rect key="frame" x="72" y="13" width="226" height="16"/>
+                                <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="13"/>
+                                <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Kq1-PU-kgW" firstAttribute="leading" secondItem="5xE-vt-bOH" secondAttribute="trailing" id="CT4-QU-qqq"/>
-                            <constraint firstItem="5xE-vt-bOH" firstAttribute="leading" secondItem="D2W-nM-fi8" secondAttribute="leading" constant="20" id="dbI-If-4I7"/>
+                            <constraint firstItem="5xE-vt-bOH" firstAttribute="leading" secondItem="D2W-nM-fi8" secondAttribute="leading" constant="12" id="dbI-If-4I7"/>
                             <constraint firstItem="5xE-vt-bOH" firstAttribute="top" secondItem="D2W-nM-fi8" secondAttribute="top" id="dou-I1-3Db"/>
-                            <constraint firstAttribute="trailing" secondItem="Kq1-PU-kgW" secondAttribute="trailing" constant="20" id="e19-hZ-PlS"/>
+                            <constraint firstAttribute="trailing" secondItem="Kq1-PU-kgW" secondAttribute="trailing" id="e19-hZ-PlS"/>
                             <constraint firstAttribute="bottom" secondItem="5xE-vt-bOH" secondAttribute="bottom" id="gBP-sg-VNp"/>
                             <constraint firstItem="Kq1-PU-kgW" firstAttribute="centerY" secondItem="5xE-vt-bOH" secondAttribute="centerY" id="joQ-Hd-M7J"/>
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="D2W-nM-fi8" secondAttribute="trailing" constant="20" id="jsl-Ba-9cb"/>
+                    <constraint firstAttribute="trailing" secondItem="D2W-nM-fi8" secondAttribute="trailing" constant="11" id="jsl-Ba-9cb"/>
                     <constraint firstItem="D2W-nM-fi8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mDP-gc-ebW"/>
-                    <constraint firstItem="D2W-nM-fi8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="vFW-rD-j1U"/>
+                    <constraint firstItem="D2W-nM-fi8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="vFW-rD-j1U"/>
                     <constraint firstAttribute="bottom" secondItem="D2W-nM-fi8" secondAttribute="bottom" id="wnI-wo-dVQ"/>
                 </constraints>
             </tableViewCellContentView>
